# gut-modele-scoringowe

./: README.md  pyproject.toml
kolokwium/: notebook.ipynb
kolokwium/data/: dane-2.csv  dane-3-rozwiazanie.csv  dane-3.csv  dane-egzamin-2.csv  dane-egzamin.csv  dane-rozwiazanie.csv  dane.csv
lab-1/: notebook.ipynb
lab-1/data/: Mays - Arkusz1.csv
lab-5/: notebook.ipynb
